@@ -27,6 +27,7 @@
   packages are not on the default path (or in $prefix). This avoids some
   accidents on some platforms
 - configure prints a summary of optional packages found at the end
+- im_lhisteq() checks for window too small
 
 25/1/08 started 7.14.0
 - bump all version numbers for new stable
